--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,170 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
-:root{
-    --green:#27ae60;
+:root {
+    --green: #27ae60;
 }
 
-*{
+* {
     font-family: 'Nunito', sans-serif;
-    margin:0; padding:0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    outline: none; border:none;
+    outline: none;
+    border: none;
     text-decoration: none;
     text-transform: capitalize;
     transition: all .2s linear;
 }
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar{
-    width:.7rem;
+html::-webkit-scrollbar {
+    width: .7rem;
 }
 
-html::-webkit-scrollbar-track{
-    background:#fff;
+html::-webkit-scrollbar-track {
+    background: #fff;
 }
 
-html::-webkit-scrollbar-thumb{
-    background:var(--green);
+html::-webkit-scrollbar-thumb {
+    background: var(--green);
 }
 
-body{
-    background:#eee;
+body {
+    background: #eee;
     padding-right: 5rem;
 }
 
-section{
-    padding:2rem 9%;
+section {
+    padding: 2rem 9%;
     min-height: 100vh;
 }
 
-.heading{
+.heading {
     text-align: center;
     padding-bottom: 2rem;
     font-size: 4rem;
     text-transform: uppercase;
-    color:#222;
+    color: #222;
 }
 
-.heading span{
+.heading span {
     text-transform: uppercase;
-    color:var(--green);
+    color: var(--green);
 }
 
-.btn{
+.btn {
     display: inline-block;
     margin-top: 1rem;
-    padding:.8rem 3rem;
-    background:#ff8e49;
-    color:#fff;
+    padding: .8rem 3rem;
+    background: #ff8e49;
+    color: #fff;
     font-size: 1.7rem;
     cursor: pointer;
 }
 
-.btn:hover{
-    background:var(--green);
+.btn:hover {
+    background: var(--green);
     letter-spacing: .2rem;
 }
 
-header{
+header {
     position: fixed;
-    top:0; right:0;
+    top: 0;
+    right: 0;
     min-height: 100vh;
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background:#fff;
+    background: #fff;
     z-index: 1000;
 }
 
-header .navbar{
+header .navbar {
     writing-mode: vertical-lr;
-    padding:1.5rem;
+    padding: 1.5rem;
 }
 
-header .navbar a{
-    padding:1.5rem;
+header .navbar a {
+    padding: 1.5rem;
     font-size: 1.8rem;
-    color:#222;
+    color: #222;
 }
 
-header .navbar a:hover{
-    color:var(--green);
+header .navbar a:hover {
+    color: var(--green);
 }
 
-#menu-bars{
+#menu-bars {
     position: fixed;
     z-index: 10000;
-    top:1rem; left:1rem;
-    padding:1rem 1.5rem;
+    top: 1rem;
+    left: 1rem;
+    padding: 1rem 1.5rem;
     border-radius: .5rem;
-    color:#fff;
+    color: #fff;
     background: var(--green);
     cursor: pointer;
     font-size: 3rem;
     display: none;
 }
 
-.home{
+.home {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 }
 
-.home #particles-js{
+.home #particles-js {
     position: absolute;
-    top:0; left:0;
-    height:100%;
-    width:100%;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
 
-.home::before{
+.home::before {
     content: '';
     position: absolute;
-    top:0; left:0;
-    height:100%;
-    width:100%;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
 
-.home .content{
+.home .content {
     text-align: center;
     position: relative;
     z-index: 1;
 }
 
-.home .content img{
+.home .content img {
     height: 25rem;
-    width:25rem;
+    width: 25rem;
     border-radius: 13%;
     object-fit: cover;
-    border:1rem solid var(--green);
+    border: 1rem solid var(--green);
 }
 
-.home .content h3{
+.home .content h3 {
     margin-top: 2rem;
     font-size: 4rem;
-    color:#222;
+    color: #222;
     text-transform: uppercase;
 }
 
-.home .content h3 span{
-    color:var(--green);
+.home .content h3 span {
+    color: var(--green);
     text-transform: uppercase;
 }
 
-.home .content p{
-    color:#222;
+.home .content p {
+    color: #222;
     font-size: 2.5rem;
     line-height: 2;
 }
@@ -168,24 +174,24 @@ header .navbar a:hover{
     margin-bottom: 2rem;
 }
 
-.about .row{
+.about .row {
     display: flex;
     flex-wrap: wrap;
-    gap:4.5rem;
+    gap: 4.5rem;
     align-items: center;
     margin: 2rem 0;
 }
 
-.about .row .image{
+.about .row .image {
     text-align: left;
-    flex:1 1 25rem;
+    flex: 1 1 25rem;
 }
 
-.about .row .image img{
-    width:45rem;
+.about .row .image img {
+    width: 45rem;
     border-radius: .5rem;
-    border:1rem solid #fff;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border: 1rem solid #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
 
 .about .row p {
@@ -199,60 +205,60 @@ header .navbar a:hover{
     line-height: 0;
 }
 
-.about .row .content{
-    flex:1 1 55rem;
+.about .row .content {
+    flex: 1 1 55rem;
 }
 
-.about .row .content h3{
-    color:#222;
+.about .row .content h3 {
+    color: #222;
     font-size: 3rem;
 }
 
-.about .row .content h3 span{
-    color:var(--green);
+.about .row .content h3 span {
+    color: var(--green);
 }
 
-.about .row .content .info{
-    color:#333;
+.about .row .content .info {
+    color: #333;
     font-size: 1.7rem;
-    padding:1rem 0;
+    padding: 1rem 0;
     line-height: 2;
 }
 
-.about .row .content .box-container{
+.about .row .content .box-container {
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
-    padding:1rem 0;
+    gap: 1.5rem;
+    padding: 1rem 0;
 }
 
-.about .row .content .box-container .box{
-    flex:1 1 20rem;
+.about .row .content .box-container .box {
+    flex: 1 1 20rem;
 }
 
-.about .row .content .box-container .box p{
+.about .row .content .box-container .box p {
     font-size: 1.7rem;
-    color:#222;
-    padding:.5rem 0;
+    color: #222;
+    padding: .5rem 0;
     line-height: 2;
 }
 
-.about .row .content .box-container .box p span{
-    color:var(--green);
+.about .row .content .box-container .box p span {
+    color: var(--green);
 }
 
-.services .box-container{
+.services .box-container {
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap: 1.5rem;
 }
 
-.services .box-container .box{
-    flex:1 1 30rem;
+.services .box-container .box {
+    flex: 1 1 30rem;
     border-radius: .5rem;
-    background:#fff;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-    padding:2rem;
+    background: #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    padding: 2rem;
     text-align: center;
 }
 
@@ -260,120 +266,121 @@ header .navbar a:hover{
     text-transform: initial;
 }
 
-.services .box-container .box i{
-    color:var(--green);
+.services .box-container .box i {
+    color: var(--green);
     font-size: 5rem;
-    padding:1rem 0;
+    padding: 1rem 0;
 }
 
-.services .box-container .box h3{
-    color:#222;
+.services .box-container .box h3 {
+    color: #222;
     font-size: 2.5rem;
-    padding-top:1rem;
+    padding-top: 1rem;
 }
 
-.services .box-container .box p{
-    color:#333;
-    font-size:1.7rem;
-    padding:1rem 0;
+.services .box-container .box p {
+    color: #333;
+    font-size: 1.7rem;
+    padding: 1rem 0;
     line-height: 2;
 }
 
-.portfolio .box-container{
+.portfolio .box-container {
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap: 1.5rem;
 }
 
-.portfolio .box-container .box{
-    flex:1 1 30rem;
+.portfolio .box-container .box {
+    flex: 1 1 30rem;
     border-radius: .5rem;
-    border:1rem solid #fff;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    border: 1rem solid #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
     position: relative;
-    overflow:hidden;
-    height:25rem;
+    overflow: hidden;
+    height: 25rem;
 }
 
-.portfolio .box-container .box img{
+.portfolio .box-container .box img {
     height: 100%;
-    width:100%;
+    width: 100%;
     object-fit: cover;
 }
 
-.portfolio .box-container .box .content{
+.portfolio .box-container .box .content {
     height: 100%;
-    width:100%;
+    width: 100%;
     position: absolute;
-    top:0; left:-100%;
-    background:#fff9;
+    top: 0;
+    left: -100%;
+    background: #fff9;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.portfolio .box-container .box:hover .content{
-    left:0;
+.portfolio .box-container .box:hover .content {
+    left: 0;
 }
 
-.blogs .box-container{
+.blogs .box-container {
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap: 1.5rem;
 }
 
-.blogs .box-container .box{
+.blogs .box-container .box {
     flex: 1 1 30rem;
     border-radius: .5rem;
-    background:#fff;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-    padding:2rem;
+    background: #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    padding: 2rem;
 }
 
-.blogs .box-container .box img{
-    height:20rem;
-    width:100%;
+.blogs .box-container .box img {
+    height: 20rem;
+    width: 100%;
     border-radius: .5rem;
     object-fit: cover;
 }
 
-.blogs .box-container .box h3{
-    color:var(--green);
+.blogs .box-container .box h3 {
+    color: var(--green);
     font-size: 2.5rem;
-    padding:.5rem 0;
+    padding: .5rem 0;
 }
 
-.blogs .box-container .box p{
-    color:#666;
+.blogs .box-container .box p {
+    color: #666;
     font-size: 1.5rem;
-    padding:.5rem 0;
+    padding: .5rem 0;
     text-transform: initial;
 }
 
-.contact .row{
-    display:flex;
+.contact .row {
+    display: flex;
     align-items: center;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap: 1.5rem;
 }
 
-.contact .row .image{
-    flex:1 1 40rem;
+.contact .row .image {
+    flex: 1 1 40rem;
 }
 
-.contact .row .image img{
+.contact .row .image img {
     width: 100%;
 }
 
-.contact .row form{
-    flex:1 1 40rem;
-    padding:1rem 2rem;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+.contact .row form {
+    flex: 1 1 40rem;
+    padding: 1rem 2rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
     border-radius: .5rem;
-    background:#fff;
+    background: #fff;
 }
 
-.contact .row form .inputBox{
+.contact .row form .inputBox {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -381,46 +388,46 @@ header .navbar a:hover{
 
 .contact .row form .inputBox input,
 .contact .row form .box,
-.contact .row form textarea{
-    width:100%;
+.contact .row form textarea {
+    width: 100%;
     border-radius: .5rem;
     font-size: 1.7rem;
-    color:#333;
-    padding:1rem;
-    margin:1rem 0;
-    border:.1rem solid rgba(0,0,0,.1);
+    color: #333;
+    padding: 1rem;
+    margin: 1rem 0;
+    border: .1rem solid rgba(0, 0, 0, .1);
     text-transform: none;
 }
 
 .contact .row form .inputBox input:focus,
 .contact .row form .box:focus,
-.contact .row form textarea:focus{
+.contact .row form textarea:focus {
     border-color: var(--green);
 }
 
-.contact .row form .inputBox input{
-    width:49%;
+.contact .row form .inputBox input {
+    width: 49%;
 }
 
-.contact .row form textarea{
-    height:20rem;
+.contact .row form textarea {
+    height: 20rem;
     resize: none;
 }
 
-.contact .row form .btn{
-    margin:.5rem 0;
+.contact .row form .btn {
+    margin: .5rem 0;
 }
 
-.footer{
-    padding:2.5rem;
+.footer {
+    padding: 2.5rem;
     font-size: 2rem;
-    color:#666;
-    background:#fff;
+    color: #666;
+    background: #fff;
     text-align: center;
 }
 
-.footer span{
-    color:var(--green);
+.footer span {
+    color: var(--green);
 }
 
 
@@ -435,56 +442,56 @@ header .navbar a:hover{
 
 
 /* media queries  */
-@media (max-width:991px){
+@media (max-width:991px) {
 
-    html{
+    html {
         font-size: 55%;
     }
 
-    body{
+    body {
         padding-right: 0;
     }
-    
-    section{
-        padding:2rem;
+
+    section {
+        padding: 2rem;
     }
 
-    header{
-        width:100%;
-        left:-120%;
+    header {
+        width: 100%;
+        left: -120%;
     }
 
-    header.active{
-        left:0%;
+    header.active {
+        left: 0%;
     }
 
-    #menu-bars{
+    #menu-bars {
         display: initial;
     }
 
-    header .navbar{
+    header .navbar {
         writing-mode: horizontal-tb;
     }
 
-    header .navbar a{
+    header .navbar a {
         display: block;
         font-size: 3rem;
     }
 
 }
 
-@media (max-width:450px){
+@media (max-width:450px) {
 
-    html{
+    html {
         font-size: 50%;
     }
 
-    .heading{
+    .heading {
         font-size: 4rem;
     }
 
-    .contact .row form .inputBox input{
-        width:100%;
+    .contact .row form .inputBox input {
+        width: 100%;
     }
 
 }
